fix authorize