@@ -5,8 +5,6 @@ import com.library.library.Model.Dto.RegistrationDto;
 import com.library.library.Security.JWT.JwtService;
 import com.library.library.Security.UserPrincipal;
 import com.library.library.Service.UserCredentialsService;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -17,12 +15,8 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.savedrequest.HttpSessionRequestCache;
-import org.springframework.security.web.savedrequest.RequestCache;
-import org.springframework.security.web.savedrequest.SavedRequest;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.ModelAttribute;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 
@@ -65,60 +59,43 @@ public class AuthController {
         return "logout";
     }
 
-    @PostMapping(value = "/login-back", consumes = MediaType.APPLICATION_JSON_VALUE)
-    public ResponseEntity<?> loginBack(@RequestBody LoginRequest loginRequest, HttpServletRequest request, HttpServletResponse response) {
+    @PostMapping(value = "/login-back", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<?> loginBack(@RequestBody LoginRequest loginRequest) {
         Map<String, Object> responseBody = new HashMap<>();
         try {
-            if (loginRequest.getEmail() == null || loginRequest.getEmail().trim().isEmpty()) {
-                responseBody.put("success", false);
-                responseBody.put("fieldErrors", Map.of("email", "Email is required"));
-                return ResponseEntity.badRequest().body(responseBody);
+            if (loginRequest.getEmail() == null || loginRequest.getEmail().isBlank()) {
+                return ResponseEntity.badRequest().body(Map.of(
+                        "success", false,
+                        "fieldErrors", Map.of("email", "Email is required")
+                ));
             }
-            String email = loginRequest.getEmail().trim();
-            // Account checks
-            if (userCredentialsService.isAccountLocked(email)) {
-                responseBody.put("success", false);
-                responseBody.put("message", "Account locked");
-                responseBody.put("code", 423);
-                responseBody.put("accountLockedUntil", userCredentialsService.getLockedUntil(email));
-                return ResponseEntity.status(HttpStatus.LOCKED).body(responseBody);
-            }
-            if (userCredentialsService.isAccountDeleted(email)) {
-                responseBody.put("success", false);
-                responseBody.put("message", "Account deleted");
-                return ResponseEntity.status(HttpStatus.LOCKED).body(responseBody);
-            } // Authenticate
-            Authentication authentication = authenticationManager.authenticate(new UsernamePasswordAuthenticationToken(email, loginRequest.getPassword()));
+
+            Authentication authentication = authenticationManager.authenticate(
+                    new UsernamePasswordAuthenticationToken(loginRequest.getEmail().trim(), loginRequest.getPassword())
+            );
             SecurityContextHolder.getContext().setAuthentication(authentication);
+
             UserPrincipal userPrincipal = (UserPrincipal) authentication.getPrincipal();
             String jwt = jwtService.generateToken(userPrincipal);
-            request.getSession().setAttribute("JWT", jwt);
-            // Redirect handling
-            String targetUrl = loginRequest.getTargetUrl();
-            if (targetUrl == null || targetUrl.isEmpty()) {
-                RequestCache requestCache = new HttpSessionRequestCache();
-                SavedRequest savedRequest = requestCache.getRequest(request, response);
-                if (savedRequest != null) {
-                    targetUrl = savedRequest.getRedirectUrl();
-                    requestCache.removeRequest(request, response);
-                } else {
-                    targetUrl = "/";
-                }
-            }
+
             responseBody.put("success", true);
             responseBody.put("token", jwt);
-            responseBody.put("redirectUrl", targetUrl);
+            responseBody.put("redirectUrl", "/");
             return ResponseEntity.ok(responseBody);
+
         } catch (BadCredentialsException e) {
-            responseBody.put("success", false);
-            responseBody.put("message", "Invalid email or password");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(responseBody);
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+                    "success", false,
+                    "message", "Invalid email or password"
+            ));
         } catch (AuthenticationException e) {
-            responseBody.put("success", false);
-            responseBody.put("message", "Authentication failed");
-            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(responseBody);
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of(
+                    "success", false,
+                    "message", "Authentication failed"
+            ));
         }
     }
+
 
     @PostMapping(value = "/register-back", consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> registerBack(@RequestBody RegistrationDto registrationRequest) {
